--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habits Tracker</title>
+    <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
-    
+    <header>
+      <img id="title" src="./assets/habits.svg" alt="Título do Habit Tracker">
+      <button>
+        <img src="./assets/plus.svg" alt="Operador de soma na cor roxa">
+        Registrar meu dia
+      </button>
+    </header>
+
+    <form id="form-habits">
+      <div class="habits">
+        <div class="habit">🏃‍♂️</div>
+        <div class="habit">💧</div>
+        <div class="habit">🍎 </div>
+      </div>
+      <div class="days">
+        <div class="day">
+          <div>03/01</div>
+            <input type="checkbox" name="corrida">
+            <input type="checkbox" checked name="agua">
+            <input type="checkbox" checked name="comida">
+        </div>
+                <div class="day">
+          <div>04/01</div>
+            <input type="checkbox" name="corrida">
+            <input type="checkbox" checked name="agua">
+            <input type="checkbox" checked name="comida">
+        </div>
+      </div>
+    </form>
+
   </body>
 </html>
