--- a/index.html
+++ b/index.html
@@ -14,31 +14,22 @@
       <img id="title" src="./assets/habits.svg" alt="Título do Habit Tracker">
       <button>
         <img src="./assets/plus.svg" alt="Operador de soma na cor roxa">
-        Registrar meu dia
+        <div>new habit</div>
       </button>
     </header>
 
     <form id="form-habits">
       <div class="habits">
-        <div class="habit">🏃‍♂️</div>
-        <div class="habit">💧</div>
-        <div class="habit">🍎 </div>
+        <div class="habit" data-name="corrida">🏃‍♂️</div>
+        <div class="habit" data-name="agua">💧</div>
+        <div class="habit" data-name="comida">🍎</div>
+        <div class="habit" data-name="diario">📒</div>
       </div>
       <div class="days">
-        <div class="day">
-          <div>03/01</div>
-            <input type="checkbox" name="corrida">
-            <input type="checkbox" checked name="agua">
-            <input type="checkbox" checked name="comida">
-        </div>
-                <div class="day">
-          <div>04/01</div>
-            <input type="checkbox" name="corrida">
-            <input type="checkbox" checked name="agua">
-            <input type="checkbox" checked name="comida">
-        </div>
-      </div>
+        <div class="day"></div>
     </form>
 
+    <script src="https://cdn.jsdelivr.net/gh/maykbrito/libs/NLWSetup/source/NLWSetup.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
