--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img id="title" src="./assets/habits.svg" alt="Título do Habit Tracker">
       <button>
         <img src="./assets/plus.svg" alt="Operador de soma na cor roxa">
-        <div>new habit</div>
+        <div>registrar</div>
       </button>
     </header>
 
